tests/negative/Termination/Axiom.juvix
module Axiom;

axiom A : let
    x : Type := x;
  in x;
